# EDA_T4_2023-2

./: .gitignore  CMakeLists.txt  README.md
include/: utils.hpp
include/abbTree/: abb.hpp
include/avlTree/: avl.hpp
include/ttTree/: tt.hpp  ttNode.hpp
insertions/: insertions_32.txt  insertions_34.txt  insertions_43.txt  insertions_51.txt  insertions_52.txt  insertions_54.txt
src/: abb.cpp  abbNode.cpp  avl.cpp  avlNode.cpp  numbers.cpp  tt.cpp  ttNode.cpp  utils.cpp
test/: test.cpp
test_files/: insertions_31.txt  insertions_42.txt  insertions_43.txt  insertions_51.txt  insertions_52.txt  seeker_3.txt  seeker_4.txt  seeker_5.txt
